[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "roleplay"
version = "0.1.0"
description = "A utility for reading configurations from a YAML file to run Langchain."
authors = [{ name = "maye76", email = "hi@maye.run" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "langchain>=0.3.17",
    "langgraph>=0.2.70",
    "pydantic>=2.10.6",
    "PyYAML>=6.0.2",
    "langchain-openai>=0.3.4",
]